Open Source the repository

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,10 +7,11 @@ updates:
     schedule:
       interval: "weekly"
     reviewers:
-      - "rewindio/devops"
+      - "rewindio/appsec"
     labels:
       - "appsec"
     open-pull-requests-limit: 10
     ignore:
       - dependency-name: "*"
-        update-types: ["version-update:semver-minor", "version-update:semver-patch"]
+        update-types:
+          ["version-update:semver-minor", "version-update:semver-patch"]
